test/extension-policy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-gateway-config
  namespace: envoy-gateway-system
data:
  envoy-gateway.yaml: |
    apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: EnvoyGateway
    gateway:
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
    logging:
      level:
        default: info
    provider:
      kubernetes:
        rateLimitDeployment:
          container:
            image: docker.io/envoyproxy/ratelimit:49af5cca
          patch:
            type: StrategicMerge
            value:
              spec:
                template:
                  spec:
                    containers:
                    - imagePullPolicy: IfNotPresent
                      name: envoy-ratelimit
        shutdownManager:
          image: envoyproxy/gateway:v1.2.4
      type: Kubernetes
    extensionManager:
      extensions:
      - name: tailscale-gateway-extension
        hooks:
        - PostVirtualHostModify
        - PostTranslateModify
        - PostRouteModify
        service:
          host: cluster1-gateway-extension-server.envoy-gateway-system.svc.cluster.local
          port: 5005
          tls:
            insecureSkipVerify: true
