test/kind-config.yaml
kind: Cluster
apiVersion: kind.x-k8s.io/v1alpha4
name: tailscale-gateway-test
nodes:
- role: control-plane
  extraPortMappings:
  - containerPort: 80
    hostPort: 9080
    protocol: TCP
  - containerPort: 443
    hostPort: 9443
    protocol: TCP
  kubeadmConfigPatches:
  - |
    kind: InitConfiguration
    nodeRegistration:
      kubeletExtraArgs:
        node-labels: "ingress-ready=true"
- role: worker
- role: worker
