test/test-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: default
spec:
  containers:
  - name: client
    image: curlimages/curl:latest
    command: ["sleep", "3600"]
  restartPolicy: Never
